--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "A custom form builder application using MERN stack and Bootstrap.",
   "main": "server.js",
   "scripts": {
-  
     "dev": "nodemon backend/server.js",
     "build": " npm install && npm install --prefix frontend && npm run build --prefix frontend",
     "start": "node backend/server.js"
@@ -16,5 +15,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.21.2",
     "mongoose": "^5.13.23"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
